fix: horizontal scroll in chrome

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,20 @@
 
 #app {
   font-weight: normal;
+  width: 100%;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  scroll-margin-top: 72px;
 }
 
 ::selection {
